--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
 <div id="rainbow-flash"></div>
 
 <script>
-    const hand = ["①","①","①","②","③","④","⑤","⑥","⑦","⑧","⑨","⑨","⑨"];
+    const hand = ["①","①","①","②","③","④","④","⑤","⑦","⑧","⑨","⑨","⑨"];
     const quotes = [
         "ツボがわかんないです",
         "承知するっていたよな！？",
